# rua

./: AGENTS.md  Cargo.toml  README.md  flake.nix
docs/: config.md
src/: app.rs  config.rs  deepseek.rs  lib.rs  main.rs  model.rs  session.rs  tools.rs
src/app/: event.rs  input.rs  mod.rs  render.rs  state.rs
